--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,3 +3,29 @@ logging.file: log/test.log
 logging.level.root: WARN
 logging.level.org.springframework.web: ERROR
 logging.level.org.hibernate: ERROR
+
+#spring:
+#  datasource:
+#    url: "jdbc:mysql://localhost/area?characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&serverTimezone=UTC"
+#    username: "root"
+#    password: "123456"
+#    # 使用druid数据源
+#    type: com.alibaba.druid.pool.DruidDataSource
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#    filters: stat
+#    maxActive: 20
+#    initialSize: 1
+#    maxWait: 60000
+#    minIdle: 1
+#    timeBetweenEvictionRunsMillis: 60000
+#    minEvictableIdleTimeMillis: 300000
+#    validationQuery: select 'x'
+#    testWhileIdle: true
+#    testOnBorrow: false
+#    testOnReturn: false
+#    poolPreparedStatements: true
+#    maxOpenPreparedStatements: 20
+#
+#mybatis:
+#  mapperLocations: classpath:mapper/*.xml
+#  typeAliasesPackage: com.test.domain.mapper.model
